fix: accordion title align

--- a/src/theme/ItaliaTheme/Blocks/_accordion.scss
+++ b/src/theme/ItaliaTheme/Blocks/_accordion.scss
@@ -82,6 +82,7 @@ $accordion-icon-color: #7fb2e5;
                 color: $primary;
                 font-size: 1.2rem;
                 font-weight: bold;
+                text-align: left;
 
                 .icon {
                   flex-shrink: 0;
